# mons-rust

./: .claudeignore  .cursorignore  .gitignore  AGENTS.md  AUTOMOVE_IDEAS.md  Cargo.toml  HOW_TO_ITERATE_ON_AUTOMOVE.md  README.md  package.json  publish.sh  repo-clean.sh  stronger_pro_automove_roadmap.md  todo.md
docs/: automove-archive.md  automove-experiments.md  automove-knowledge.md  automove-major-reset-plan.md  automove-pro-strategy-interview.md  automove-reset-review.md  automove-strategy.md  automove-structural-review.md  pro_intent_planner_v2_findings.md
pkg/: README.md  mons_rust.d.ts  mons_rust.js  mons_rust_bg.wasm  mons_rust_bg.wasm.d.ts  package.json
pkg-web/: README.md  mons_rust.d.ts  mons_rust.js  mons_rust_bg.wasm  mons_rust_bg.wasm.d.ts  package.json
rules-tests/: 1000008199495250519  1000009459274342374  1000015810067231396  1000043213952487718  1000052714031253946  1000096723076153781  1000100051696949827  1000129008003323774  1000158070254168470  100018016627988157  1000228349763297169  1000233413636645566  1000257721011609755  1000277172527899906  1000292464639742917  1000323672985903442  1000330584487337535  1000380347788101877  1000383326442762394  1000465001701977239  1000535874021426838  1000547876642174088  1000550727192059094  1000582416478845834  1000584423598510677  1000610886330115243  1000640634950312467  1000644947764427175  1000663622034745157  1000693131928185575  1000702547584516534  1000706282191242498  1000722144835640936  1000780766297313413  1000807901435159598  100082831738209738  1000887879766641501  1000911752223766570  (+373742 more)
(+77 files in other folders)
